<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:paddingBottom="12dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/fragment_history_menu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp">


            <RelativeLayout
                android:id="@+id/rlContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/bilgi"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitle"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/ed_reportErrorDialog"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@id/tvSubTitle"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/error_boy_border"
                    android:hint="@string/hata_aciklama"
                    android:maxLength="150"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reportErrorDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/hata_bildir" />


        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_closeErrorDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:padding="15dp"
        app:srcCompat="@drawable/ic_cancel_gray_24dp" />
</RelativeLayout>