<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linLayStatusBarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relLayStatusBarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_gray_line"
            android:paddingLeft="11dp"
            android:paddingRight="8dp">

            <Spinner
                android:id="@+id/sp_statusBarCity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/img_pin"
                android:background="@null"
                android:dropDownWidth="250dp" />

            <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                android:id="@+id/tvKonumDegistir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/konum_degistir"
                android:textColor="#5B636F"
                android:textSize="11dp"
                app:fontType="Exo_Regular" />

            <ImageView
                android:id="@+id/img_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pin_white" />


        </RelativeLayout>

        <View
            android:id="@+id/lineStatusBar"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_exchangeOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/img_exchangeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:src="@drawable/ic_up_arrow" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_exchangeImage"
                    android:orientation="vertical">

                    <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                        android:id="@+id/tv_exchangeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:textColor="#A9FFFFFF"
                        android:textSize="12sp"
                        app:fontType="Exo_SemiBold" />

                    <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                        android:id="@+id/tv_statusDollar"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_toRightOf="@id/currentCoin"
                        android:gravity="top"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:textColor="@android:color/white"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        app:fontType="Exo_Bold"
                        tools:text="0.000" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_prayerOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/currentCoin"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:paddingBottom="5dp"
                    android:src="@drawable/ic_mosque_white" />

                <LinearLayout
                    android:id="@+id/linLayPrayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/currentCoin"
                    android:orientation="vertical">

                    <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                        android:id="@+id/tv_statusPrayerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="@string/vakit"
                        android:textColor="#A9FFFFFF"
                        android:textSize="12sp"
                        app:fontType="Exo_SemiBold" />

                    <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                        android:id="@+id/tv_statusPrayer"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="top"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="-- : --"
                        android:textColor="#FFF"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        app:fontType="Exo_Bold" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_weatherOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/img_statusWeather"
                    android:layout_width="24dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:src="@drawable/ic_rain_blue" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_statusWeather"
                    android:orientation="vertical">

                    <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                        android:id="@+id/tv_statusWeatherTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="@string/bugun"
                        android:textColor="#A9FFFFFF"
                        android:textSize="12sp"
                        app:fontType="Exo_SemiBold" />

                    <turkuvaz.general.turkuvazgeneralwidgets.TurkuvazTextView.TTextView
                        android:id="@+id/tv_statusWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="top"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text=" -- / --"
                        android:textColor="#FFF"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        app:fontType="Exo_Bold" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_exchangeRoot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bottom_semi_gray_line" />

    </LinearLayout>

</RelativeLayout>